# catweb-mcp

./: .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml
src/catweb_mcp/: __init__.py  index.py  server.py
