[project]
name = "catweb-mcp"
version = "0.2.0"
description = "MCP server exposing search across the CatWeb docs and template repos so AI agents can find what they need."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Mailo037" }]
dependencies = [
    "mcp[cli]>=1.0",
    "pyyaml>=6.0",
    "httpx>=0.27",
]

[project.scripts]
catweb-mcp = "catweb_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/catweb_mcp"]
